# Langmuir

./: MANIFEST.in  README.md  pyproject.toml
Langmuir_LR.egg-info/: PKG-INFO  SOURCES.txt
langmuir_LR.egg-info/: PKG-INFO  SOURCES.txt
src/Langmuir_LR.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/langmuir_LR/: basic.py  compute.py  eedf.py
src/langmuir_LR.egg-info/: PKG-INFO  SOURCES.txt
src:/langmuir_LR/: basic.py  eedf.py
